adding fonts, just using git link isntead of another view

--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,14 @@
 body {
-	padding-top: 70px
+	padding-top: 70px;
+	font-family: 'Cabin', sans-serif;
+}
+
+.profession, .name {
+	text-align: center;
+}
+
+.profession, .job-title {
+	font-family: 'Lobster', cursive;
 }
 .experience {
 	padding : 10px;
@@ -9,8 +18,7 @@ body {
 }
 
 .job-title{
-	font-weight: bold;
-	font-size: 1.2em;
+	font-size: 1.5em;
 }
 
 .job-duration{
