making text larger, using Sanchez font

--- a/views/experience.html
+++ b/views/experience.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-xs-12">
                 <ul>
-                    <li ng-repeat="highlight in experience.highlights">{{highlight}}</li>
+                    <li ng-repeat="highlight in experience.highlights" class="job-highlight">{{highlight}}</li>
                 </ul>
             </div>
         </div>
