--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 body {
 	padding-top: 70px;
-	font-family: 'Cabin', sans-serif;
+	font-family: 'Sanchez', serif;
 }
 
 .profession, .name {
@@ -18,15 +18,19 @@ body {
 }
 
 .job-title{
-	font-size: 1.5em;
+	font-size: 2.3em;
 }
 
 .job-duration{
-	font-size: 0.80em;
+	font-size: 1.0em;
 	color: #777;
 }
 .job-summary {
-	font-size: 0.80em;
+	font-size: 1.0em;
+}
+
+.job-highlight{
+	font-size: 1.3em;
 }
 
 .contact-info .fa-li{
